--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 	
 	<meta charset="UTF-8">
-	<meta content="Henry Andres Fraile Gonzalez" name="author"/>
+	<meta content="HEIDY VIVIANA CASTRO RODRIGUEZ" name="author"/>
     <meta content="Plantilla	para	el	diseño	y	publicación	de	un	Objeto	Virtual	de	Aprendizaje	OVA" name="description" />
     <meta content="OVA, Objeto, Virtual, Aprendizaje, Curso, Linux" name="keywords" />
 	<title>Objeto Virtual de Aprendizaje</title>
@@ -41,7 +41,7 @@
 	<h2>Linux Desde Cero</h2>
 </div>
 <Footer>
-	<h3>Henry Andres Fraile Gonzalez - Diseño de Sitios Web</h3>
+	<h3>HEIDY VIVIANA CASTRO RODRIGUEZ - Diseño de Sitios Web</h3>
 	<h3>Todos los Derechos Reservados &copy; 2016</h3>
 </Footer>
 
